--- a/tests/qunit/simple-map-test.html
+++ b/tests/qunit/simple-map-test.html
@@ -3,8 +3,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.12.0.css">
 	<title>Tests for Simple Map</title>
-	<script type='text/javascript' src='http://wp.dev/wp-includes/js/jquery/jquery.js?ver=1.11.3'></script>
 	<style>
 		.simplemap img
 		{
@@ -34,6 +34,8 @@
 
 <body>
 	<h1>Tests for simple-map.js</h1>
+		<div id="qunit"></div>
+		<div id="qunit-fixture"></div>
 
 
 	<h2><code>[map]Tokyo, Japan[/map]</code></h2>
@@ -58,8 +60,10 @@
 	<div class="simplemap"><div class="simplemap-content" data-breakpoint="480" data-lat="" data-lng="" data-zoom="16" data-addr="" data-infowindow="close" style="width:100%;height:200px;">Osaka, Japan</div></div>
 
 
-	<script type='text/javascript' src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
-	<script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type='text/javascript' src='http://code.jquery.com/jquery-2.1.4.min.js'></script>
 	<script type='text/javascript' src='../../js/simple-map.min.js'></script>
+	<script type='text/javascript' src='http://code.jquery.com/qunit/qunit-1.12.0.js'></script>
+    <script src='tests.js'></script>
 </body>
 </html>
